Fix 'hr' element not showing up in announcements
Setting 'display: grid' on 'content-announcements-wrapper' broke the
width of hr elements in it. Setting hr elements' width to 100% fixes the
issue.

--- a/style.css
+++ b/style.css
@@ -291,6 +291,7 @@ button:hover {
 .content-announcements hr {
     border: none;
     border-bottom: 1px solid var(--announcements-hr);
+    width: 100%;
 }
 
 .content-trending {
